Fix gaps and hover

--- a/css/style.css
+++ b/css/style.css
@@ -19,12 +19,12 @@
     --color: hsl(0, 0%, 86%);
     --colorA: hsla(0, 0%, 100%, 0.2);
     --color2: hsl(0, 0%, 26%);
-    --gap: 0.5rem;
+    --gap: 1rem;
     --width: 100px;
 
 
     font-family: 'regular';
-    font-size: 10px;
+    font-size: 12px;
     font-smoothing: antialiased;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -84,7 +84,7 @@ main {
 
 header {
     width: fit-content;
-	max-width: calc(var(--width) * 6);
+	max-width: 540px;
     display: grid;
     row-gap: var(--gap);
     justify-items: center;
@@ -100,10 +100,6 @@ button {
     justify-content: center;
     height: 1rem;
     
-}
-
-button:hover {
-    text-decoration: underline;
 }
 
 button::before {
@@ -133,9 +129,10 @@ button.info::before {
 }
 
 .information p {
-    margin-top: calc(var(--gap) * 0.6);
     text-align: justify;
     text-align-last: center;
+    font-size: 1.1rem;
+    margin-top: calc(var(--gap) * 0.6);
     max-width: calc(var(--width) * 4);
 }
 
@@ -159,7 +156,7 @@ button.info::before {
 }
 
 .arrow {
-    height: var(--gap);
+    height: calc(var(--gap) * 0.6);
     margin-top: calc(var(--gap) * 2);
     margin-bottom: calc(var(--gap) / 5);
 }
@@ -232,13 +229,19 @@ button.info::before {
 
 @media (min-width: 500px) {
     :root {
+        --gap: 0.5rem;
         font-size: 11px;
+
     }
 
     body, h2, h3, p {
         font-weight: 400;
         margin: 0;
         padding: 0;
+    }
+
+    button:hover {
+        text-decoration: underline;
     }
 
     .expander:nth-of-type(1){
